# brisk_auth_extension

./: .gitignore  Cargo.toml  README.md  build.sh  build_release.sh  index.html  manifest.json  popup.js  run_wasm.js  stores.js
src/: lib.rs  main.rs
