[package]
name = "brisk_auth_extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
data-encoding = "2.5.0"
hmac-sha1 = "0.2.2"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Document",
  "Window",
  "Element",
  "HtmlElement",
  "Node",
  "HtmlInputElement",
  "Storage",
  "Event",
  "EventTarget",
  "EventInit"
]
